--- a/deployment/Makefile
+++ b/deployment/Makefile
@@ -11,6 +11,9 @@ all:
 	poetry run python3 param.py
 	
 clean:
+	rm -f hello.h
+	rm -rf ../build
 	rm -f ../application_processor/inc/ectf_params.h
 	rm -f ../component/inc/ectf_params.h
-	rm -f hello.h
+	
+	
